--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "smarthospital_playwright",
+  "name": "playwright-bdd",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx cucumber-js"
+    "clean:reports": "rimraf test-results reports rerun.txt",
+    "testonly": "cross-env-shell \"npx cucumber-js --profile default || exit 0\"",
+    "test": "npm run clean:reports && npm run testonly && npm run posttest",
+    "posttest": "npx ts-node src/helper/report.ts",
+    "rerun": "npx cucumber-js @rerun.txt --profile rerun"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "devDependencies": {
     "@cucumber/cucumber": "^11.3.0",
     "@playwright/test": "^1.53.2",
-    "@types/node": "^24.0.12",
+    "@types/node": "^20.11.30",
+    "@types/winston": "^2.4.4",
     "cross-env": "^7.0.3",
     "dotenv": "^17.1.0",
+    "multiple-cucumber-html-reporter": "^3.9.3",
     "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "winston": "^3.17.0"
   },
   "dependencies": {
     "csv-parse": "^5.6.0"
